tests/ui/traits/next-solver/stalled-coroutine-obligations.stderr
error[E0271]: type mismatch resolving `T == {async block@$DIR/stalled-coroutine-obligations.rs:18:18: 18:23}`
  --> $DIR/stalled-coroutine-obligations.rs:18:14
   |
LL |     let foo: T = async {};
   |              ^ types differ

error[E0271]: type mismatch resolving `U == {async block@$DIR/stalled-coroutine-obligations.rs:22:18: 22:23}`
  --> $DIR/stalled-coroutine-obligations.rs:22:14
   |
LL |     let bar: U = async {};
   |              ^ types differ

error[E0271]: type mismatch resolving `T == {async block@$DIR/stalled-coroutine-obligations.rs:33:18: 33:23}`
  --> $DIR/stalled-coroutine-obligations.rs:33:14
   |
LL |     let foo: T = async { a };
   |              ^ types differ

error[E0271]: type mismatch resolving `impl Future + Send == {async block@$DIR/stalled-coroutine-obligations.rs:41:9: 41:19}`
  --> $DIR/stalled-coroutine-obligations.rs:39:43
   |
LL |     fn stalled_send(&self, b: *mut ()) -> impl Future + Send {
   |                                           ^^^^^^^^^^^^^^^^^^ expected `async` block, found associated type
LL |
LL |         async move {
   |         ---------- the expected `async` block
   |
   = note: expected `async` block `{async block@$DIR/stalled-coroutine-obligations.rs:41:9: 41:19}`
            found associated type `impl Future + Send`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0271`.
